[gd_scene load_steps=13 format=3 uid="uid://bk0lpn0aayava"]

[ext_resource type="Script" path="res://Wheel.gd" id="1_8sto1"]
[ext_resource type="Script" path="res://Tracker.gd" id="2_nx6bx"]
[ext_resource type="Script" path="res://TrackSettings.gd" id="3_cqd0c"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e7x1h"]
transparency = 1
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_y047o"]
material = SubResource("StandardMaterial3D_e7x1h")
radius = 0.15
height = 0.3

[sub_resource type="Curve" id="Curve_d41to"]
min_value = 1.0
max_value = 4.0
_data = [Vector2(0, 1), 0.0, 9.91758, 0, 0, Vector2(1, 4), 0.223705, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_t00f3"]
colors = PackedColorArray(0.51, 0.51, 0.51, 0.615686, 0.38, 0.38, 0.38, 0)

[sub_resource type="CylinderMesh" id="CylinderMesh_wo12b"]
height = 0.3
radial_segments = 6
rings = 0

[sub_resource type="Gradient" id="Gradient_favqy"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Resource" id="Resource_cgq5j"]
script = ExtResource("3_cqd0c")
track = false
width = 1.0
color = Color(0.133333, 0, 1, 1)

[sub_resource type="Resource" id="Resource_1vjl6"]
script = ExtResource("3_cqd0c")
track = true
width = 0.3
color = Color(0, 0, 0, 1)

[sub_resource type="Resource" id="Resource_1rlil"]
script = ExtResource("3_cqd0c")
track = true
width = 0.3
color = Color(0.21, 0.154, 0, 1)

[node name="Wheel" type="Node3D"]
script = ExtResource("1_8sto1")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[node name="RoostParticles" type="CPUParticles3D" parent="."]
cast_shadow = 0
amount = 100
mesh = SubResource("SphereMesh_y047o")
direction = Vector3(0, 0.5, -1)
spread = 10.0
damping_min = 10.0
damping_max = 10.0
scale_amount_curve = SubResource("Curve_d41to")
color_ramp = SubResource("Gradient_t00f3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_wo12b")

[node name="TreadTracker" type="RayCast3D" parent="."]
script = ExtResource("2_nx6bx")
gradient = SubResource("Gradient_favqy")
lifetime = 10.0
default_width = 0.2
default_track_settings = SubResource("Resource_cgq5j")

[node name="SkidTracker" type="RayCast3D" parent="."]
script = ExtResource("2_nx6bx")
gradient = SubResource("Gradient_favqy")
lifetime = 10.0
default_width = 0.2
default_track_settings = SubResource("Resource_1vjl6")
effect_material_track_settings = {
"dirt": SubResource("Resource_1rlil")
}
